@@ -1,3 +1,6 @@
+  14 May 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
+  add bind-tools dependency
+
   09 May 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
   do not compile all locales when minimal
 
